# Scalable-Ant-Colony-Optimization-Engine-on-Fractal-Terrains

./: .gitignore  README.md
distributed_subdomain_hybrid_mpi_omp/: CMakeLists.txt  README.md  plot_sweep_times.py  run_render_sweep_food10.sh
distributed_subdomain_hybrid_mpi_omp/include/: ant_migration.hpp  basic_types.hpp  fractal_land.hpp  halo.hpp  rand_generator.hpp  renderer.hpp
distributed_subdomain_hybrid_mpi_omp/results/: iter.csv
distributed_subdomain_hybrid_mpi_omp/results/sweeps_render_food10/: iter_ranks2_omp2_ants10000.csv  iter_ranks2_omp2_ants160000.csv  iter_ranks2_omp2_ants20000.csv  iter_ranks2_omp2_ants40000.csv  iter_ranks2_omp2_ants5000.csv  iter_ranks2_omp2_ants80000.csv  iter_ranks2_omp3_ants10000.csv  iter_ranks2_omp3_ants160000.csv  iter_ranks2_omp3_ants20000.csv  iter_ranks2_omp3_ants40000.csv  iter_ranks2_omp3_ants5000.csv  iter_ranks2_omp3_ants80000.csv  iter_ranks2_omp4_ants10000.csv  iter_ranks2_omp4_ants160000.csv  iter_ranks2_omp4_ants20000.csv  iter_ranks2_omp4_ants40000.csv  iter_ranks2_omp4_ants5000.csv  iter_ranks2_omp4_ants80000.csv  iter_ranks3_omp2_ants10000.csv  iter_ranks3_omp2_ants160000.csv  iter_ranks3_omp2_ants20000.csv  iter_ranks3_omp2_ants40000.csv  iter_ranks3_omp2_ants5000.csv  iter_ranks3_omp2_ants80000.csv  iter_ranks3_omp3_ants10000.csv  iter_ranks3_omp3_ants160000.csv  iter_ranks3_omp3_ants20000.csv  iter_ranks3_omp3_ants40000.csv  iter_ranks3_omp3_ants5000.csv  iter_ranks3_omp3_ants80000.csv  iter_ranks3_omp4_ants10000.csv  iter_ranks3_omp4_ants160000.csv  iter_ranks3_omp4_ants20000.csv  iter_ranks3_omp4_ants40000.csv  iter_ranks3_omp4_ants5000.csv  iter_ranks3_omp4_ants80000.csv  iter_ranks4_omp2_ants10000.csv  iter_ranks4_omp2_ants160000.csv  iter_ranks4_omp2_ants20000.csv  iter_ranks4_omp2_ants40000.csv  (+278 more)
distributed_subdomain_hybrid_mpi_omp/src/: ant_migration.cpp  ant_simu.cpp  fractal_land.cpp  halo.cpp  renderer.cpp  subdomain.cpp  window.cpp
distributed_subdomain_mpi/: CMakeLists.txt  README.md  compile_flags.txt  plot_sweep_times.py  run_render_sweep_food10.sh
distributed_subdomain_mpi/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
distributed_subdomain_mpi/include/: ant_migration.hpp  ant_system.hpp  (+6 more)
docs/: .latexmkrc  report.aux  report.fdb_latexmk  report.fls  report.tex
nonvectorized/: ant.hpp  ant_simu.cpp  pheronome.hpp
vectorized/: Make_msys2.inc  Makefile  README.md
vectorized_omp/: README.md  plot_sweep_times.py  run_render_sweep_food10.sh
(+254 files in other folders)
